[metadata]
description-file = README.rst
[aliases]
test=pytest
[flake8]
# because of the way that future works, we need to call install_aliases before
# finishing the imports. flake8 thinks that we're doing the imports too late,
# but it's actually ok
ignore = E402
max-line-length = 100
[bdist_wheel]
universal=1