[metadata]
description-file = README.rst
license_file = LICENSE.txt

[aliases]
test=pytest
[flake8]
# because of the way that future works, we need to call install_aliases before
# finishing the imports. flake8 thinks that we're doing the imports too late,
# but it's actually ok
ignore = E402
max-line-length = 100
[bdist_wheel]
universal=1
[tool:pytest]
addopts = -v --cov=senpy --cov-report term-missing
filterwarnings =
    ignore:the matrix subclass:PendingDeprecationWarning
[coverage:report]
omit = senpy/__main__.py
